temp/meta_generation_test_500.log
2025-09-14 13:34:34,079 - SourceAnalyzer - INFO - logger.py:68 - Recursion limit set to: 500
2025-09-14 13:34:34,080 - SourceAnalyzer - INFO - logger.py:68 - SourceAnalyzer 시작
2025-09-14 13:34:34,085 - SourceAnalyzer - INFO - logger.py:68 - 분석 대상 프로젝트: sampleSrc
2025-09-14 13:34:34,085 - SourceAnalyzer - INFO - logger.py:68 - 분석 옵션:
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 -   - 메타데이터베이스 초기화: False
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 -   - 상세 로그: False
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 -   - 출력 형식: html
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 -   - 드라이런 모드: False
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 -   - 강제 실행: False
2025-09-14 13:34:34,086 - SourceAnalyzer - INFO - logger.py:68 - 1단계 실행: 파일 정보 저장 (프로젝트 전체 스캔)
2025-09-14 13:34:34,087 - SourceAnalyzer - INFO - logger.py:68 - === 파일 스캔 시작: 파일 정보 저장 ===
2025-09-14 13:34:34,089 - SourceAnalyzer - INFO - logger.py:68 - 메타데이터베이스 초기화 완료: D:\Analyzer\CreateMetaDb\projects\sampleSrc\metadata.db
2025-09-14 13:34:34,091 - SourceAnalyzer - INFO - logger.py:68 - 프로젝트 파일 스캔 시작: D:\Analyzer\CreateMetaDb\projects\sampleSrc
2025-09-14 13:34:34,325 - SourceAnalyzer - INFO - logger.py:68 - 파일 스캔 완료: 총 46개 파일
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - 파일 정보 저장 완료: 46개 파일
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - === 파일 스캔 통계 ===
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - 총 파일 수: 46
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - 성공 스캔: 46
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - 오류 파일: 0
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - Java 파일: 30
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - XML 파일: 6
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - JSP 파일: 8
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - SQL 파일: 0
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - CSV 파일: 2
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - 기타 파일: 0
2025-09-14 13:34:34,331 - SourceAnalyzer - INFO - logger.py:68 - === 파일 스캔 완료 ===
2025-09-14 13:34:34,334 - SourceAnalyzer - INFO - logger.py:68 - 1단계 완료: 파일 정보 저장
2025-09-14 13:34:34,336 - SourceAnalyzer - INFO - logger.py:68 - 전역 프로젝트 정보 설정: sampleSrc (ID: 1)
2025-09-14 13:34:34,336 - SourceAnalyzer - INFO - logger.py:68 - 2단계 실행: 데이터베이스 구조 저장 및 컴포넌트 생성
2025-09-14 13:34:34,336 - SourceAnalyzer - INFO - logger.py:68 - === 데이터베이스 로딩 시작: 데이터베이스 구조 저장 ===
2025-09-14 13:34:34,337 - SourceAnalyzer - INFO - logger.py:68 - 인코딩 문제 감지, 다른 인코딩으로 재시도: ALL_TABLES.csv
2025-09-14 13:34:34,337 - SourceAnalyzer - INFO - logger.py:68 - CSV 파일 로드 완료: D:\Analyzer\CreateMetaDb\projects\sampleSrc\db_schema\ALL_TABLES.csv, 16개 행
2025-09-14 13:34:34,339 - SourceAnalyzer - INFO - logger.py:68 - 테이블 정보 저장 완료: 16개 테이블 (오류: 0개)
2025-09-14 13:34:34,339 - SourceAnalyzer - INFO - logger.py:68 - 인코딩 문제 감지, 다른 인코딩으로 재시도: ALL_TAB_COLUMNS.csv
2025-09-14 13:34:34,339 - SourceAnalyzer - INFO - logger.py:68 - CSV 파일 로드 완료: D:\Analyzer\CreateMetaDb\projects\sampleSrc\db_schema\ALL_TAB_COLUMNS.csv, 91개 행
2025-09-14 13:34:34,345 - SourceAnalyzer - INFO - logger.py:68 - 컬럼 정보 저장 완료: 91개 컬럼 (오류: 0개)
2025-09-14 13:34:34,345 - SourceAnalyzer - INFO - logger.py:68 - 테이블 컴포넌트 생성 완료: 16개
2025-09-14 13:34:34,353 - SourceAnalyzer - INFO - logger.py:68 - 컬럼 컴포넌트 생성 완료: 91개
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - 컬럼 component_id 업데이트 완료: 91개
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - === 데이터베이스 구조 저장 통계 ===
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - 테이블 로드: 16 (오류: 0)
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - 컬럼 로드: 91 (오류: 0)
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - 컴포넌트 생성: 107 (오류: 0)
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - inferred 컬럼 생성: 0
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - 오류 없이 완료
2025-09-14 13:34:34,363 - SourceAnalyzer - INFO - logger.py:68 - === 데이터베이스 로딩 완료 ===
2025-09-14 13:34:34,364 - SourceAnalyzer - INFO - logger.py:68 - 2단계 완료: 데이터베이스 구조 저장 및 컴포넌트 생성
2025-09-14 13:34:34,364 - SourceAnalyzer - INFO - logger.py:68 - 3단계 실행: XML 파일 분석 및 SQL 컴포넌트 등록 + JOIN 관계 분석
2025-09-14 13:34:34,387 - SourceAnalyzer - ERROR - logger.py:128 - FATAL ERROR at D:\Analyzer\CreateMetaDb\parser\__init__.py:12 in <module>()
Code: from .xml_parser import XmlParser
Message: 프로그램 실행 중 오류 발생
Exception: SyntaxError: expected 'except' or 'finally' block (xml_parser.py, line 1145)
Stack Trace:
Traceback (most recent call last):
  File "D:\Analyzer\CreateMetaDb\main.py", line 110, in main
    from xml_loading import XmlLoadingEngine
  File "D:\Analyzer\CreateMetaDb\xml_loading.py", line 22, in <module>
    from parser.xml_parser import XmlParser
  File "D:\Analyzer\CreateMetaDb\parser\__init__.py", line 12, in <module>
    from .xml_parser import XmlParser
  File "D:\Analyzer\CreateMetaDb\parser\xml_parser.py", line 1145
    if tag_name == 'bind':
    ^^
SyntaxError: expected 'except' or 'finally' block


[FATAL ERROR] 프로그램이 에러로 인해 종료됩니다. (종료코드: 1)
자세한 내용은 로그 파일을 확인하세요: logs/SourceAnalyzer_20250914_133434.log
